--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
 body {
-    background-color: #fef9e7;
+    background: #222;
+    text-align: center;
     font-family: Arial;
-    padding: 45px;
 }
 
-h1 {
-    color: #d68910;
-    font-size: 48px;
-    text-align: center;
+h1, p {
+    color: orange;
 }
 
 img {
-    width: 400px;
-    max-width: 100%;
+    width: 250px;
+    border: 4px solid orange;
     border-radius: 10px;
-    margin: 20px 0;
 }
